plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

allprojects {
    group = "aurora"
    version = "0.1.0-alpha"

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: "java"

    dependencies {
        implementation "org.jetbrains:annotations:26.1.0"
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    test {
        useJUnitPlatform()
    }

    apply plugin: 'maven-publish'
    apply plugin: 'signing'

    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java

                groupId = "aurora"
                artifactId = project.name
                version = "0.1.0-alpha"

                pom {
                    name = project.name
                    description = 'Aurora programming language component'
                    url = 'https://github.com/akkiserver-dev/aurora-lang'
                    licenses {
                        license {
                            name = 'MIT License'
                            url = 'https://opensource.org/licenses/MIT'
                        }
                    }
                    scm {
                        url = 'https://github.com/akkiserver-dev/aurora-lang'
                        connection = 'scm:git:git://github.com/akkiserver-dev/aurora-lang.git'
                    }
                }
            }
        }

        repositories {
            maven {
                name = "akkiserver"
                url = "https://maven.akkiserver.uk/repository/maven-releases/"

                credentials {
                    username = System.getenv("NEXUS_USERNAME")
                    password = System.getenv("NEXUS_PASSWORD")
                }
            }
        }
    }

    signing {
        def signingKey = System.getenv("GPG_SIGNING_KEY")
        def signingPassword = System.getenv("GPG_PASSWORD")
        useInMemoryPgpKeys(signingKey, signingPassword)
        sign publishing.publications.mavenJava
    }
}

dependencies {
    subprojects.each {
        if (it.name != 'aurora-intellij') {
            implementation it
        }
    }
}

shadowJar {
    archiveClassifier.set('')
    manifest {
        attributes(
                'Main-Class': 'aurora.Main'
        )
    }
}

jar {
    enabled = false
}

tasks.jar.dependsOn(shadowJar)